<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_upcoming"
            android:icon="@drawable/ic_subscriptions"
            android:title="@string/upcoming" />
        <item
            android:id="@+id/nav_nowplaying"
            android:icon="@drawable/ic_menu_slideshow"
            android:title="@string/now_playing" />
        <item
            android:id="@+id/nav_popular"
            android:icon="@drawable/ic_popular"
            android:title="@string/popular" />
    </group>

    <item android:title="Catalogue Movie">
        <menu>
            <item
                android:id="@+id/nav_favorite"
                android:icon="@drawable/ic_favorite"
                android:title="@string/label_myfavorite" />
            <item
                android:id="@+id/nav_share"
                android:icon="@drawable/ic_menu_share"
                android:title="@string/label_share" />
            <item
                android:id="@+id/nav_settings"
                android:icon="@drawable/ic_settings"
                android:title="@string/action_settings" />
        </menu>
    </item>

</menu>
