<?xml version="1.0" encoding="utf-8"?>
<android.support.v4.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="id.web.wfebriadi.cataloguemovie.DetailMovieActivity"
    tools:showIn="@layout/activity_detail_movie"
    android:background="@color/viewBg">

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <ProgressBar
            android:id="@+id/loading_detailMovie"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:visibility="invisible" />

        <LinearLayout
            android:id="@+id/error_msg_detailMovie"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:orientation="vertical"
            android:paddingEnd="@dimen/large_spacing"
            android:paddingStart="@dimen/large_spacing"
            android:visibility="invisible">

            <ImageView
                android:layout_width="150dp"
                android:layout_height="150dp"
                android:layout_gravity="center"
                android:contentDescription="@string/error_msg"
                android:scaleType="centerCrop"
                android:src="@drawable/no_connection" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="5dp"
                android:text="@string/error_msg"
                android:textAlignment="center"
                android:textAppearance="?android:textAppearanceMedium" />

            <Button
                android:id="@+id/btn_retry_detailMovie"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:text="@string/retry" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/content_detail_layout"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/medium_spacing"
                android:orientation="horizontal">

                <ImageView
                    android:id="@+id/img_poster"
                    android:layout_width="154dp"
                    android:layout_height="231dp"
                    android:contentDescription="@string/image_poster_movie"
                    android:scaleType="centerCrop"
                    android:src="@drawable/img_default"
                    android:transitionName="poster" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/spacing"
                    android:orientation="vertical">

                    <TextView
                        android:id="@+id/tv_title_detail"
                        android:text="Ini Judul Film"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="@dimen/spacing"
                        android:textSize="24sp"
                        android:textStyle="bold"
                        android:textColor="@android:color/white"/>

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="@dimen/medium_spacing"
                        android:text="@string/release_date"
                        android:textSize="20sp"
                        android:textStyle="bold"
                        android:textColor="@android:color/white"/>

                    <TextView
                        android:id="@+id/tv_release_date_detail"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textColor="@android:color/white"/>

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="@dimen/spacing"
                        android:text="@string/duration"
                        android:textSize="20sp"
                        android:textStyle="bold"
                        android:textColor="@android:color/white"/>

                    <TextView
                        android:id="@+id/tv_runtime"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textColor="@android:color/white"/>

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="@dimen/spacing"
                        android:text="@string/vote_average"
                        android:textSize="20sp"
                        android:textStyle="bold"
                        android:textColor="@android:color/white"/>

                    <RatingBar
                        android:id="@+id/ratingBarDetail"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginEnd="8dp"
                        android:numStars="5"
                        style="@style/Widget.AppCompat.RatingBar.Small"/>

                    <TextView
                        android:id="@+id/tv_vote"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textColor="@android:color/white"/>

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="@dimen/spacing"
                        android:text="@string/genre"
                        android:textSize="20sp"
                        android:textStyle="bold"
                        android:textColor="@android:color/white"/>

                    <android.support.v7.widget.RecyclerView
                        android:id="@+id/rv_genre"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"/>

                    <!--<TextView-->
                    <!--android:id="@+id/tv_genres"-->
                    <!--android:layout_width="wrap_content"-->
                    <!--android:layout_height="wrap_content" />-->

                </LinearLayout>

            </LinearLayout>


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginLeft="@dimen/medium_spacing"

                android:layout_marginRight="@dimen/medium_spacing"
                android:orientation="vertical">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/overview"
                    android:textSize="20sp"
                    android:textStyle="bold"
                    android:textColor="@android:color/white"/>

                <TextView
                    android:id="@+id/tv_overview_detail"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:textColor="@android:color/white"/>

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/medium_spacing"
                    android:text="@string/cast"
                    android:textSize="20sp"
                    android:textStyle="bold"
                    android:textColor="@android:color/white"/>

                <android.support.v7.widget.RecyclerView
                    android:id="@+id/rv_credits"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/medium_spacing"
                    android:text="@string/production_companies"
                    android:textSize="20sp"
                    android:textStyle="bold"
                    android:textColor="@android:color/white"/>

                <android.support.v7.widget.RecyclerView
                    android:id="@+id/rv_companies"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" />
            </LinearLayout>

        </LinearLayout>
    </FrameLayout>


</android.support.v4.widget.NestedScrollView>
