<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/viewBg"
    tools:context=".SearchActivity">

    <android.support.v7.widget.RecyclerView
        android:id="@+id/rv_search"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:scrollbars="vertical" />

    <ProgressBar
        android:id="@+id/loading_search"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginBottom="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="@+id/rv_search"
        app:layout_constraintTop_toTopOf="@+id/rv_search"
        android:visibility="invisible" />

    <LinearLayout
        android:id="@+id/error_msg_search"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginBottom="8dp"
        android:layout_marginTop="8dp"
        android:orientation="vertical"
        android:paddingEnd="@dimen/large_spacing"
        android:paddingStart="@dimen/large_spacing"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toTopOf="@+id/rv_search"
        android:visibility="invisible">

        <ImageView
            android:layout_width="150dp"
            android:layout_height="150dp"
            android:layout_gravity="center"
            android:contentDescription="@string/error_msg"
            android:scaleType="centerCrop"
            android:src="@drawable/no_connection" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="5dp"
            android:text="@string/error_msg"
            android:textAlignment="center"
            android:textAppearance="?android:textAppearanceMedium" />

        <Button
            android:id="@+id/btn_retry_search"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/retry" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/notfound_msg_search"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginBottom="8dp"
        android:layout_marginTop="8dp"
        android:orientation="vertical"
        android:paddingEnd="@dimen/large_spacing"
        android:paddingStart="@dimen/large_spacing"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toTopOf="@+id/rv_search"
        android:visibility="invisible">

        <ImageView
            android:layout_width="150dp"
            android:layout_height="150dp"
            android:layout_gravity="center"
            android:contentDescription="@string/error_msg"
            android:scaleType="fitCenter"
            android:src="@drawable/not_found" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="5dp"
            android:text="@string/notfound_msg"
            android:textAlignment="center"
            android:textAppearance="?android:textAppearanceMedium" />

        <Button
            android:id="@+id/btn_search_again"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/search_again" />

    </LinearLayout>


</android.support.constraint.ConstraintLayout>
